Added a grid node
Simsharing: add UserComponent chaining for FaucetNode and its FaucetSlider
Changes to FPAFFaucetNode, required by cleanup of FaucetNode base class, see #3199
# 0.00.46 (58668) Nov 16, 2011
# 0.00.45 (58667) Nov 16, 2011
# 0.00.44 (58665) Nov 16, 2011
Made it so the dye button can't be pressed repeatedly
Converted line of dye to grid of dots
Position the meter stick so that its origin is at the top of the pool since the rulers measure down in this tab
Removed man graphic since students may think he is supposed to do something
Put zero at the bottom of rulers in flow and water tower tabs
# 0.00.43 (58597) Nov 15, 2011
Moved the plant and man behind the rulers and sensors
# 0.00.42 (58595) Nov 15, 2011
Reverse the numbers on the ruler so 0 is at the top of the pool
Made man and plan non-draggable
# 0.00.41 (58591) Nov 15, 2011
Fluid pressure: Added a potted plant and standing man for a sense of scale
# 0.00.40 (57966) Oct 24, 2011
Fluid flow: Account for the minimum pipe width when restricting the pipe y-offset, this prevents the pipe from being made too small
# 0.00.39 (57964) Oct 24, 2011
Fluid flow: Moved the control panels in front of the pipe so they can't be obscured by it
# 0.00.38 (57960) Oct 24, 2011
Fluid flow: Restrict flow rate to be more than or equal to 1000 L/s, this prevents too many red dots from piling up
Fluid flow: Restrict flow rate to be less than or equal to 10000 L/s, this prevents negative pressure situations
Fluid flow: Update the pressure readout when the user changes the flow rate
# 0.00.37 (57958) Oct 24, 2011
Updated handle images for pipe and hose to have "grip" texture
# 0.00.36 (57926) Oct 24, 2011
Replaced T-handle with circle handle for pipe and hose
# 0.00.35 (57619) Oct 13, 2011
Fluid Flow: moved the density control in front of the pipe so it doesn't get overlapped
# 0.00.34 (57615) Oct 13, 2011
Fixed: the ruler can be dragged off the canvas