@@ -1,3 +1,4 @@
+Added an Atmosphere control to the control panel
 Added a grid node
 Simsharing: add UserComponent chaining for FaucetNode and its FaucetSlider
 Changes to FPAFFaucetNode, required by cleanup of FaucetNode base class, see #3199
